# market-radar

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
docs/: alert-rules.md  api-contract.md  architecture.md  data-model.md  data-source-policy.md  decision-log.md  (+20 more)
services/api/: README.md  pyproject.toml
services/api/app/: __init__.py  config.py  live_e2e.py  live_validation.py  main.py  scheduler_runner.py
services/api/app/alerts/: __init__.py  engine.py  models.py  service.py
services/api/app/api/routes/: alerts.py  events.py  filings.py  health.py  history.py  jobs.py  live.py  providers.py  quotes.py  reports.py  storage.py  watchlist.py
services/api/app/domain/: __init__.py  market_event.py  quote.py  report.py  watchlist.py
services/api/app/jobs/: __init__.py  executor.py  models.py  registry.py  scheduler.py  service.py  tasks.py
services/api/app/mock_data/: events.json  quotes.json  watchlist.json
services/api/app/providers/: __init__.py  base.py  fallback.py  mock.py  moomoo_adapter.py  moomoo_quotes.py  moomoo_runtime.py  registry.py  sec_edgar.py
services/api/app/reports/: __init__.py  engine.py
services/api/app/repositories/: __init__.py  base.py  memory.py  models.py  sqlite.py
services/api/app/services/: archive.py
services/api/tests/: test_alerts.py  test_events.py  test_health.py  test_jobs.py  test_live_e2e.py  test_live_validation_gating.py  test_moomoo_provider.py  test_network_isolation.py  test_quotes.py  test_reports.py  test_repositories.py  test_sec_edgar_provider.py  test_storage_api.py
(+47 files in other folders)
